src/tui/transfer/snapshots/sshrack__tui__transfer__render_search__tests__draw_search_list_empty_dir_shows_dot_not_no_matches_snapshot.snap
---
source: src/tui/transfer/render_search.rs
expression: term.backend()
---
"  ▶ .                                   "
"                                        "
"                                        "
