src/tui/transfer/snapshots/sshrack__tui__transfer__render_search__tests__draw_search_list_long_path_truncates_tail_with_ellipsis_snapshot.snap
---
source: src/tui/transfer/render_search.rs
expression: term.backend()
---
"  ▶ …alpha/src/main.rs      "
"                            "
"                            "
