src/tui/transfer/snapshots/sshrack__tui__transfer__render_search__tests__draw_search_list_renders_dot_row_at_top_snapshot.snap
---
source: src/tui/transfer/render_search.rs
expression: term.backend()
---
"  ▶ .                                   "
"    apath/bfile                         "
"    apath/bdir/                         "
"                                        "
"                                        "
"                                        "
