src/tui/transfer/snapshots/sshrack__tui__transfer__render_search__tests__draw_search_list_renders_results_cursor_and_dir_suffix_snapshot.snap
---
source: src/tui/transfer/render_search.rs
expression: term.backend()
---
"    apath/bfile                         "
"  ▶ apath/bdir/                         "
"    xdir/yfile                          "
"                                        "
"                                        "
"                                        "
